<resources>
    <string name="app_name">FWTools</string>
    <string name="not_support_ble">您的设备不支持蓝牙！</string>
    <string name="ble_init_failed">设备蓝牙初始化失败！</string>
    <string name="app_need_ble">应用需要蓝牙支持，是否开启？</string>
    <string name="open">开启</string>
    <string name="ok">确定</string>
    <string name="exit">退出</string>
    <string name="ignore">忽略</string>
    <string name="warning">提示</string>
    <string name="plan_end_warn">您的计划已经进行到最后一天，加油哦！</string>
    <string name="please_stop_running_first">请先结束跑步</string>
    <string name="click_again_exit">再点击一次退出程序</string>
    <string name="account_colon">帐号:</string>
    <string name="password_colon">密码:</string>
    <string name="check_code">校验码:</string>
    <string name="confirm_password_colon">确认密码:</string>
    <string name="confirm_password">再次确认密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入校验码</string>
    <string name="input_correct_phone">请输入正确的手机号</string>
    <string name="input_correct_height">请输入正确的身高</string>
    <string name="input_correct_weight">请输入正确的体重</string>
    <string name="input_correct_shoe_size">请输入正确的鞋码</string>
    <string name="comfirm_password_different">两次密码输入不一致</string>
    <string name="phone_colon">手机号:</string>
    <string name="input_password">请输入密码</string>
    <string name="password_at_least_6_char">密码至少6个字符</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="username_colon">昵称:</string>
    <string name="input_username">请输入昵称</string>
    <string name="gender_colon">性别:</string>
    <string name="height_colon">身高(cm):</string>
    <string name="input_height">请输入身高</string>
    <string name="weight_colon">体重(kg):</string>
    <string name="input_weight">请输入体重</string>
    <string name="shoe_size_colon">鞋码:</string>
    <string name="input_shoe_size">请输入鞋码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_album">从相册选择</string>
    <string name="move_and_zoom">移动和缩放</string>
    <string name="image_load_failed">图片加载失败</string>
    <string name="image_not_exist">图片不存在</string>
    <string name="username_or_pwd_null">用户名或密码不能为空</string>
    <string name="sign_in_faile">登录失败</string>
    <string name="sign_in_ing">正在登录</string>
    <string name="sign_up_success">注册成功</string>
    <string name="phone_exist">电话已经被注册</string>
    <string name="cannot_get_qq_info">无法获取QQ用户信息</string>
    <string name="activity">活动</string>
    <string name="today_activity">今日活动</string>
    <string name="accumulation">累计</string>
    <string name="km">公里</string>
    <string name="kcal">千卡</string>
    <string name="walk">步行</string>
    <string name="unit_step">步</string>
    <string name="run_volume">跑步</string>
    <string name="min_per_km">分钟/公里</string>
    <string name="running">跑步</string>
    <string name="gait">步态</string>
    <string name="pose">姿势</string>
    <string name="unbound_warning">您还未绑定任何设备。 绑定</string>
    <string name="bind">绑定</string>
    <string name="touchdown_impact">着地冲击力</string>
    <string name="pose_distribution">姿势分布</string>
    <string name="duration_stat">时长统计</string>
    <string name="connect_first">请先连接设备</string>
    <string name="ensure_all_devices_connected">请确保所有设备已连接</string>
    <string name="rank">等级</string>
    <string name="restart_ble_request">无法连接设备，需要重新启动蓝牙，是否重启？</string>
    <string-array name="pose_types">
        <item>跑步</item>
        <item>步行</item>
        <item>站立</item>
        <item>平坐</item>
    </string-array>
    <string name="loading_playlist">音乐加载中&#8230;</string>
    <string name="brackets_min_per_km">(分钟/公里)</string>
    <string name="brackets_kcal">(千卡)</string>
    <string name="distance_brackets_m">距离(米)</string>
    <string name="locating_prompt">努力定位中&#8230;</string>
    <string name="brackets_hour">(小时)</string>
    <string name="duration">时长</string>
    <string name="path">轨迹</string>
    <string name="pace">配速</string>
    <string name="brackets_minute_second">(分:秒)</string>
    <string name="calories">卡路里</string>
    <string name="steps">步数</string>
    <string name="brackets_step">(步)</string>
    <string name="weak">弱</string>
    <string name="strong">强</string>
	<string name="clear">清空</string>
	<string name="close">关闭</string>
    <string name="playlist">播放列表</string>
    <string name="random_list">乱序</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="brackets_songs_number">(?首)</string>
    <string name="playlist_is_null">播放列表为空</string>
    <string name="fatigue_warn_text">您已达疲劳临界点，请注意休息。</string>
    <string name="damage_warn_text">您已达损伤临界点，请注意休息。</string>
    <string name="disconn_run_warn">检测到您的设备未全部连接成功，如果继续此操作可能会造成数据不准确，确定继续吗？</string>
    <string name="fatigue_somewhat_hard">有点疲劳</string>
    <string name="fatigue_hard">疲劳</string>
    <string name="fatigue_very_hard">非常疲劳</string>
    <string name="fatigue_very_very_hard">极度疲劳</string>
    <string name="injure_low">损伤低风险</string>
    <string name="injure_middle">损伤中风险</string>
    <string name="injure_high">损伤高风险</string>
    <string name="plan">计划</string>
    <string name="daily_fitness_plan">日常健身计划</string>
    <string name="lose_weight_exercise_plan">减肥锻炼计划</string>
    <string name="marathon_training_plan">马拉松训练计划</string>
    <string name="marathon_training_plan_5km">马拉松5KM训练计划</string>
    <string name="marathon_training_plan_10km">马拉松10KM训练计划</string>
    <string name="marathon_training_plan_full">马拉松全马训练计划</string>
    <string name="completed_witch_colon">已完成：</string>
    <string name="which_week_and_day">第?周第?天</string>
    <string name="run_plan_warn">还剩?天。继续努力！</string>
    <string name="full_marathon">全马</string>
    <string name="run_plan_not_start">未开始任何计划</string>
    <string name="switch_run_plan_warning">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您目前正处于?中，是否结束?，开始?？</string>
    <string name="stop_run_plan_warning">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您还未完成?，确定要结束吗？</string>
    <string name="stat_activity">活动统计</string>
    <string name="stat_gait">步态统计</string>
    <string name="stat_pose">姿势统计</string>
    <string name="fatigue_warning">疲劳预警</string>
    <string name="stat">统计</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="no_record">没有记录</string>
    <string name="distance_brackets_km">距离(公里)</string>
    <string name="pace_brackets_min_per_km">配速(分钟/公里)</string>
    <string name="calories_brackets_kcal">卡路里(千卡)</string>
	<string name="pay_zfb">支付宝兑换</string>
    <string name="pay_wx">微信兑换</string>
    <string name="pay_log">兑换记录</string>
    <string name="me">我</string>
    <string name="personal_info">个人资料</string>
    <string name="logout">注销</string>
    <string name="gender">性别</string>
    <string name="birthyear">出生年</string>
    <string name="birthyear_colon">出生年:</string>
    <string name="height_brackets">身高(厘米)</string>
    <string name="weight_brackets">体重(千克)</string>
    <string name="change_info">编辑资料</string>
    <string name="change_pwd">修改密码</string>
    <string name="change_success">修改成功</string>
    <string name="old_pwd_colon">原密码:</string>
    <string name="new_pwd_colon">新密码:</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_old_pwd">请输入原密码</string>
    <string name="reinput_pwd_colon">请再次输入新密码</string>
    <string name="ensure_change">确认修改</string>
    <string name="rotate">旋转</string>
    <string name="cancel">取消</string>
    <string name="more">更多</string>
    <string name="device_manager">设备管理</string>
    <string name="connect_device">连接设备</string>
    <string name="version_update">版本更新</string>
    <string name="check_new_version">检查新版本</string>
    <string name="run_music">伴跑音乐</string>
    <string name="all_songs">全部歌曲</string>
    <string name="my_song_list">我的歌单</string>
    <string name="voice_remind">语音提醒</string>
    <string name="scan_qr_code">扫一扫</string>
    <string name="qrcode_tips">将二维码对准取景框，\n即可自动扫描。</string>
    <string name="empty">空空如也</string>
    <string name="unkown">未知</string>
    <string name="no_playlist_prompt">还没有歌单，赶紧新建吧</string>
    <string name="add_to">添加到</string>
    <string name="new_songlist">新建歌单</string>
    <string name="select_all">全选</string>
    <string name="selected_items">已选中?项</string>
    <string name="the_new">新建</string>
    <string name="add_to_songlist">添加到歌单</string>
    <string name="input_songlist_name">请输入歌单名</string>
    <string name="save">保存</string>
    <string name="set_to_selected_songlist">设置为伴跑歌单</string>
    <string name="songlist_exist">歌单已存在</string>
    <string name="songlist_save_succeed">歌单保存成功</string>
    <string name="songlist_save_failed">歌单保存失败</string>
    <string name="selected_songlist">伴跑歌单</string>
    <string name="songs_number">\?首</string>
    <string name="complete">完成</string>
    <string name="manager">管理</string>
    <string name="current_songlist_no_song">当前歌单没有歌曲</string>
    <string name="delete">删除</string>
    <string name="songlist_not_exist">歌单不存在</string>
    <string name="add_songs">添加歌曲</string>
    <string name="available_device">可用设备</string>
    <string name="search_device">搜索设备</string>
    <string name="stop_search">停止搜索</string>
    <string name="unknown_device">未知设备</string>
    <string name="can_not_bind_diff_type_device">不能绑定两个不同类型设备</string>
    <string name="added">已添加</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="upgrade_firmware">升级固件</string>
    <string name="debug_firmware">调试固件</string>
    <string name="sport_detail">查看运动分段数据</string>
    <string name="foot_detail">查看步态详情</string>
    <string name="firmware_upgrade">固件升级</string>
    <string name="current_version">当前版本&#160;</string>
    <string name="upgrading_firmware">正在升级固件</string>
    <string name="clearing_data">正在清除数据</string>
    <string name="clear_success">设备数据清除成功</string>
    <string name="clear_faile">设备数据清除失败</string>
    <string name="clear_warn_msg">将清除所有已连接设备的数据，确定清除吗？</string>
    <string name="restart_warn_msg">确定重启所有已连接设备吗？</string>
    <string name="send_restart_success">已向?设备发送重启指令</string>
    <string name="send_restart_faile">向?设备发送重启指令失败</string>
	<string name="title_activity_pay_loginfo">PayLoginfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="ota_initialize_failed_msg">初始化失败，是否重试？</string>
    <string name="initializing">正在初始化</string>
    <string name="checking_new_version">正在检查新版本</string>
    <string name="current_newest_version">当前已是最新版本</string>
    <string name="firmware_upgrade_success">固件升级成功</string>
    <string name="firmware_upgrade_failed">固件升级失败</string>
    <string name="download_new_version_msg">发现新版本，是否马上下载？</string>
    <string name="upgrade_file_not_exist">升级文件不存在</string>
    <string name="downloading">正在下载</string>
    <string name="about_ansobuy">关于安小白</string>
    <string name="clear_dev_data">清除设备数据</string>
    <string name="restart_dev">重启设备</string>
    <string name="only_bind_one">绑定一只设备可能造成数据不准确</string>
    <string name="low_battery">设备电量低，请及时充电</string>
    <string name="ota_warning">请确保设备电量在50%以上，并距离手机2米内以保持良好信号。</string>
    <string name="show_detail">查看详情</string>
    <string name="firmware_error">固件异常</string>
    <string name="find_firmware_error">发现设备固件异常</string>
    <string name="wait_ota_complete">等待升级完成</string>
    <string name="invalid_qr_code">无效的二维码</string>
    <string name="no_device_info">无法获取设备信息</string>
    <string name="device_bind_faile">设备绑定失败，请重试</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>
    <string name="device_disconnected">设备未连接</string>
    <string name="fireware_version_different">固件版本不一致，请重新绑定，否则可能造成程序异常</string>
</resources>