<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.advanpro.fwtools.common.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/more"/>

    <com.advanpro.fwtools.common.view.ArrowItemView
        android:id="@+id/item_device_mgr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:itemTitle="@string/device_manager"/>

    <com.advanpro.fwtools.common.view.ArrowItemView
        android:id="@+id/item_run_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemTitle="@string/run_music"
        app:topDividerVisible="true"/>

    <com.advanpro.fwtools.common.view.ArrowItemView
        android:id="@+id/item_ota"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemTitle="@string/upgrade_firmware"
        app:topDividerVisible="true"/>

    <com.advanpro.fwtools.common.view.ArrowItemView
        android:id="@+id/item_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemTitle="@string/voice_remind"
        app:topDividerVisible="true"
        app:style="toggle"/>

    <com.advanpro.fwtools.common.view.ArrowItemView
        android:id="@+id/item_clear_dev_data"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintVisible="true"
        app:itemTitle="@string/clear_dev_data"/>

    <com.advanpro.fwtools.common.view.ArrowItemView
        android:id="@+id/item_restart_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintVisible="true"
        app:itemTitle="@string/restart_dev"
        app:topDividerVisible="true"/>
    
    <com.advanpro.fwtools.common.view.ArrowItemView
        android:id="@+id/item_about"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintVisible="true"
        app:itemTitle="@string/about_ansobuy"/>
</LinearLayout>