<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:orientation="vertical"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"		
		android:layout_width="match_parent"
		android:layout_weight="1"
		android:layout_height="0dp">

		<com.advanpro.fwtools.common.view.TitleBar
			android:id="@+id/title_bar"
			app:title="@string/running"
			app:endImageButtonSrc="@drawable/location"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		
		<!--音乐-->
		<FrameLayout
			android:id="@+id/music_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<!--圆环进度-->
		<FrameLayout
			android:id="@+id/progress_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageButton
				android:id="@+id/btn_push_pull"
				android:background="@drawable/music_down"
				android:layout_gravity="end"
				android:layout_marginEnd="20dp"
				android:layout_width="30dp"
				android:layout_height="43dp"/>
		</FrameLayout>
		<!--具体数值-->
		<LinearLayout
			android:id="@+id/ll_values"
			android:layout_marginTop="15dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content">

				<ImageView
					android:background="@drawable/step"
					android:layout_width="40dp"
					android:layout_height="42dp"/>

				<TextView
					android:id="@+id/tv_steps"
					android:text="0"
					android:textSize="18sp"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"
					android:singleLine="true"
					android:ellipsize="end"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:text="@string/steps"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:text="@string/brackets_step"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<LinearLayout
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content">

				<ImageView
					android:background="@drawable/rate"
					android:layout_width="40dp"
					android:layout_height="42dp"/>

				<TextView
					android:id="@+id/tv_rate"
					android:text="0"
					android:textSize="18sp"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"
					android:singleLine="true"
					android:ellipsize="end"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:text="@string/pace"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:text="@string/brackets_min_per_km"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<LinearLayout
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content">

				<ImageView
					android:background="@drawable/duration"
					android:layout_width="40dp"
					android:layout_height="42dp"/>

				<TextView
					android:id="@+id/tv_duration"
					android:text="00:00"
					android:textSize="18sp"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"
					android:singleLine="true"
					android:ellipsize="end"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:text="@string/duration"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:text="@string/brackets_minute_second"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<LinearLayout
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content">

				<ImageView
					android:background="@drawable/calorie"
					android:layout_width="40dp"
					android:layout_height="42dp"/>

				<TextView
					android:id="@+id/tv_cal"
					android:text="0"
					android:textSize="18sp"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"
					android:singleLine="true"
					android:ellipsize="end"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:text="@string/calories"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:text="@string/brackets_kcal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<RelativeLayout
		android:layout_marginBottom="20dp"
		android:layout_width="match_parent"
		android:layout_height="90dp">

		<Button			
			android:id="@+id/btn_pause_start"
			android:layout_centerHorizontal="true"
			android:background="@drawable/pause_run"
			android:layout_width="90dp"
			android:layout_height="90dp"/>

		<ImageButton
			android:id="@+id/btn_back_home"
			android:background="@drawable/back_home"
			android:layout_toStartOf="@id/btn_pause_start"
			android:layout_marginEnd="20dp"
			android:layout_alignParentBottom="true"
			android:layout_width="74dp"
			android:layout_height="74dp"/>

		<ImageButton
			android:id="@+id/btn_stop"
			android:background="@drawable/stop_run"
			android:layout_toEndOf="@id/btn_pause_start"
			android:layout_alignParentBottom="true"
			android:layout_marginStart="20dp"
			android:layout_width="74dp"
			android:layout_height="74dp"/>
	</RelativeLayout>
</LinearLayout>