<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:orientation="vertical"
			  android:background="@drawable/main_bg"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<com.advanpro.fwtools.common.view.TitleBar
		android:id="@+id/title_bar"
		app:title="@string/plan"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<RelativeLayout
		android:id="@+id/rl_plan"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/tv_process"
			android:layout_marginTop="20dp"
			android:text="日常健身计划第二周第三天"
			android:textColor="@color/sub_content_text"
			android:textSize="14sp"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<RelativeLayout
			android:id="@+id/rl_progress"
			android:layout_marginTop="10dp"
			android:layout_below="@id/tv_process"
			android:layout_width="match_parent"
			android:layout_height="200dp">
			<com.advanpro.fwtools.common.view.RoundProgressBar
				android:id="@+id/progress_bar"
				android:layout_centerHorizontal="true"					
				android:layout_width="200dp"
				android:layout_height="200dp"/>
			<LinearLayout
				android:orientation="vertical"
				android:layout_centerInParent="true"
				android:layout_width="160dp"
				android:layout_height="160dp">
				<TextView
					android:layout_marginTop="40dp"
					android:textColor="@color/sub_content_text"
					android:textSize="14sp"
					android:gravity="center"
					android:text="@string/completed_witch_colon"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
				<TextView
					android:layout_marginTop="20dp"
					android:id="@+id/tv_percent"
					android:text="41%"
					android:textColor="@color/white"
					android:textSize="34sp"
					android:gravity="center_horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
			</LinearLayout>			
		</RelativeLayout>
		<TextView
			android:id="@+id/tv_warn"
			android:layout_below="@id/rl_progress"
			android:layout_marginTop="10dp"
			android:text="还剩31天。继续坚持！"
			android:textColor="@color/sub_content_text"
			android:textSize="14sp"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</RelativeLayout>
	
	<com.advanpro.fwtools.common.view.ArrowItemView
		android:id="@+id/item_daily_plan"
		android:layout_marginTop="20dp"
		app:itemTitle="@string/daily_fitness_plan"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<com.advanpro.fwtools.common.view.ArrowItemView
		android:id="@+id/item_lose_weight_plan"
		android:layout_marginTop="10dp"
		app:itemTitle="@string/lose_weight_exercise_plan"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<com.advanpro.fwtools.common.view.ArrowItemView
		android:id="@+id/item_marathon_plan"
		android:layout_marginTop="10dp"
		app:itemTitle="@string/marathon_training_plan"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
</LinearLayout>