<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/main_bg"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.advanpro.fwtools.common.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:stretchColumns="1">
            <TableRow
                android:paddingBottom="8dp"
                android:paddingTop="8dp">
                <TextView
                    android:text="@string/old_pwd_colon"
                    android:textColor="@color/content_text"
                    android:textSize="16sp"/>

                <com.advanpro.fwtools.common.view.ClearEditText
                    android:id="@+id/et_old_pwd"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/input_old_pwd"
                    android:inputType="textPassword"
                    android:layout_marginLeft="16dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="16sp"/>
            </TableRow>
            <TableRow
                android:paddingBottom="8dp"
                android:paddingTop="8dp">
                <TextView
                    android:text="@string/new_pwd_colon"
                    android:textColor="@color/content_text"
                    android:textSize="16sp"/>

                <com.advanpro.fwtools.common.view.ClearEditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/input_new_pwd"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_marginLeft="16dp"
                    android:singleLine="true"
                    android:textSize="16sp"/>
            </TableRow>
            <TableRow
                android:paddingBottom="8dp"
                android:paddingTop="8dp">
                <TextView
                    android:text="@string/new_pwd_colon"
                    android:textColor="@color/content_text"
                    android:textSize="16sp"/>

                <com.advanpro.fwtools.common.view.ClearEditText
                    android:id="@+id/et_re_pwd"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/reinput_pwd_colon"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="16sp"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/btn_ok"
            android:layout_marginTop="40dp"
            android:text="@string/ensure_change"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#fff"
            android:background="@drawable/red_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>