<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<RelativeLayout
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:layout_width="match_parent"
		android:layout_height="60dp">

		<TextView
			android:id="@+id/tv_random"
			android:text="@string/random_list"
			android:textColor="@drawable/title_bar_text_color"
			android:layout_alignParentEnd="true"
			android:textSize="14sp"
			android:gravity="center"
			android:layout_width="60dp"
			android:layout_height="60dp"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_marginStart="60dp"
			android:layout_centerVertical="true"
			android:layout_alignParentStart="true"
			android:gravity="center"
			android:layout_toStartOf="@id/tv_random"
			android:layout_height="wrap_content">
			<TextView
				android:text="@string/playlist"
				android:textSize="18sp"
				android:textColor="@color/title_bar_text"				
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			<TextView
				android:id="@+id/tv_num"
				android:textColor="@color/sub_content_text"
				android:textSize="18sp"
				android:singleLine="true"
				android:ellipsize="end"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>	
		
	</RelativeLayout>

	<View
		android:background="#9999"
		android:layout_width="match_parent"
		android:layout_height="0.5dp"/>

	<ListView
		android:id="@+id/lv"
		android:layout_width="match_parent"
		android:overScrollMode="never"
		android:divider="@null"
		android:listSelector="@android:color/transparent"
		android:layout_height="0dp"
		android:layout_weight="1"/>
	
	<View
		android:background="#9999"
		android:layout_width="match_parent"
		android:layout_height="0.5dp"/>

	<TextView
		android:id="@+id/tv_close"
		android:text="@string/close"
		android:textSize="18sp"
		android:textColor="@color/content_text"
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="50dp"/>
</LinearLayout>