<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/main_bg"
              android:orientation="vertical">

    <com.advanpro.fwtools.common.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"        
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_colon"
                android:textColor="@color/content_text"
                android:textSize="18sp"/>

            <com.advanpro.fwtools.common.view.ClearEditText
                android:id="@+id/et_account"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/input_phone"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_colon"
                android:textColor="@color/content_text"
                android:textSize="18sp"/>

            <com.advanpro.fwtools.common.view.ClearEditText
                android:id="@+id/et_pwd"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/input_password"
                android:singleLine="true"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:enabled="false"
            android:textColor="#fff"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/red_btn"
            android:text="@string/sign_in"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="----------------------------第三方登录---------------------------"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/qqLogin"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/qq_icon"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/wxLogin"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/wx_icon"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

